--- a/todo.org
+++ b/todo.org
@@ -1,8 +1,10 @@
-#+TITLE: Todo
+#+TITLE: Zhen Todo
 
-* Minimal Product [1/5]
+* BUGs [0/1]
++ [ ] bug with resfresh tokens not resfreshing automaticaly
+
+* TODO Minimal Product [1/8]
 + [ ] make it SPA is maybe better
-  + [ ] Then do skeleton loading or other animated thing
 + [X] Nav bar
 + [-] Users
   + [X] Registration
@@ -10,18 +12,25 @@
   + [-] User profile page
     + [X] Api endpoint for users written texts
     + [ ] Ability to change users informations
-    + [ ] Frontend part
 + [-] Posts
   + [X] View
-  + [ ] List
-    + [ ] Filter posts
-    + [ ] Pagination (by page or infinite scroll?)
+  + [-] List
+    + [ ] Filter & order posts
+    + [X] Pagination (infinite scroll on frontend)
+    + [ ] Full text search (Postgres search first maybe elastic searh to learn it one day)
   + [X] Create
   + [X] Delete
-  + [ ] Correct
+  + [X] Correct
 + [ ] Notifications
++ [ ] Toasts
++ [ ] Emails ( wit 3rd party email + celery to send them async )
++ [ ] Translation of whole site to chinese
 
 * Design
++ [ ] User's Profile Page
++ [ ] Front Page
++ [ ] Footer?
++ [ ] gsap animations on front page at least
 
 * Tests
 + [ ] frontend Tests (with jest and maybe add other)
@@ -29,9 +38,16 @@
 
 * Deployment
 + [ ] emails
++ [ ] logging
++ [ ] docker
++ [ ] CI/CD
 
 * Additional features
-+ [ ] Translation of words on hover
-+ [ ] tranlations of posts (not automatic, made by user)
-+ [ ] Search functionality (with elastic search maybe if can be dynamic)
++ [ ] Translation popup of words on hover
++ [ ] Pages transition animations for mobile like experience
++ [ ] skeleton animations of loading posts
++ [ ] translations of posts (not automatic, made by user)
 + [ ] add images/avatars for users, maybe images for posts thumbnail allowed too, not sure about that
++ [ ] make my own icons (on figma or inkscape or something)
++ [ ] WYSIWYG editor for text content
+
